force-app/main/default/objects/InsurancePolicyParticipant/fields/dsalesCalle__c.field-meta.xml
<CustomField>
    <fullName>dsalesCalle__c</fullName>
    <description>Campo para registrar la calle  del participante</description>
    <label>Calle</label>
    <length>40</length>
    <type>Text</type>
</CustomField>