force-app/main/default/objects/InsurancePolicyParticipant/fields/dsalesClaveEstado__c.field-meta.xml
<CustomField>
    <fullName>dsalesClaveEstado__c</fullName>
    <description>Campo para registrar la clave del estado del participante</description>
    <label>Clave de estado</label>
    <length>5</length>
    <type>Text</type>
</CustomField>