force-app/main/default/objects/InsurancePolicyParticipant/fields/dsalesCodigoPostal__c.field-meta.xml
<CustomField>
    <fullName>dsalesCodigoPostal__c</fullName>
    <description>Campo para registrar el código postal del participante</description>
    <label>Código postal</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>