force-app/main/default/objects/InsurancePolicyParticipant/fields/dsalesCorreoElectronico__c.field-meta.xml
<CustomField>
    <fullName>dsalesCorreoElectronico__c</fullName>
    <description>Campo para registrar el email del participante</description>
    <label>Correo electrónico</label>
    <type>Email</type>
</CustomField>