force-app/main/default/objects/InsurancePolicyParticipant/fields/dsalesFechaNacimiento__c.field-meta.xml
<CustomField>
    <fullName>dsalesFechaNacimiento__c</fullName>
    <description>Campo para registrar l fecha de nacimiento  del participante</description>
    <label>Fecha de nacimiento</label>
    <type>Date</type>
</CustomField>