force-app/main/default/objects/InsurancePolicyParticipant/fields/dsalesGenero__c.field-meta.xml
<CustomField>
    <fullName>dsalesGenero__c</fullName>
    <label>Género</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Femenino</fullName>
            </value>
            <value>
                <fullName>Masculino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>