force-app/main/default/objects/InsurancePolicyParticipant/fields/dsalesNombre__c.field-meta.xml
<CustomField>
    <fullName>dsalesNombre__c</fullName>
    <description>Campo parar registrar el nombre del participante de la póliza</description>
    <label>Nombre</label>
    <length>30</length>
    <type>Text</type>
</CustomField>