force-app/main/default/objects/InsurancePolicyParticipant/fields/dsalesNumeroExterior__c.field-meta.xml
<CustomField>
    <fullName>dsalesNumeroExterior__c</fullName>
    <description>Campo para registrar el número externo de su casa del participante</description>
    <label>Número exterior</label>
    <length>4</length>
    <type>Text</type>
</CustomField>