force-app/main/default/objects/InsurancePolicyParticipant/fields/dsalesNumeroTelefono__c.field-meta.xml
<CustomField>
    <fullName>dsalesNumeroTelefono__c</fullName>
    <description>Campo para registrar el teléfono del participante</description>
    <label>Número de teléfono</label>
    <type>Phone</type>
</CustomField>