force-app/main/default/objects/InsurancePolicyParticipant/fields/dsalesPrimerApellido__c.field-meta.xml
<CustomField>
    <fullName>dsalesPrimerApellido__c</fullName>
    <description>Campo para recibir el primer apellido del participante de la póliza</description>
    <label>Primer apellido</label>
    <length>30</length>
    <type>Text</type>
</CustomField>