force-app/main/default/objects/InsurancePolicyParticipant/fields/dsalesRfc__c.field-meta.xml
<CustomField>
    <fullName>dsalesRfc__c</fullName>
    <description>Campo para registrar el RFC del  participante</description>
    <label>RFC</label>
    <length>13</length>
    <type>Text</type>
</CustomField>