force-app/main/default/objects/InsurancePolicyParticipant/fields/dsalesSegundoApellido__c.field-meta.xml
<CustomField>
    <fullName>dsalesSegundoApellido__c</fullName>
    <description>Campo para registrar el segundo apellido del participante</description>
    <label>Segundo apellido</label>
    <length>30</length>
    <type>Text</type>
</CustomField>